--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
    <body>
       <div class="wrapper"></div>
          <div class="box">
-            <img class="animal" src="images/animal07.png" alt="">
-            <img class="green" src="images/green.png" alt="">   
+            <div class="images">
+               <img class="animal" src="images/animal07.png" alt="">
+               <img class="green" src="images/green.png" alt="">   
+            </div>
             <div class="description">
                <h1>Fox</h1>
                <p class="detail">
